client/src/components/SelectGenderGallery/SelectGenderGallery.module.css
.gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 12px;
  box-sizing: border-box;
  width: 100%;
  padding: 40px 6px 0;
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 440px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 440px;
  background-size: cover;
  opacity: 0.9;
  transition: all 0.5s ease-out;
}

.overlay {
  display: block;
  float: left;
  box-sizing: border-box;
  width: 190px;
  padding: 15px;
  color: #E9FFFC;
  font-weight: 400;
  font-size: 20px;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  background: rgb(160 179 176 / 35%);
  cursor: pointer;
  transition: 0.5s ease-out;
}

.women {
  background-image: url("women.webp");
}

.men {
  background-image: url("men.webp");
}

.kids {
  background-image: url("child.webp");
}

@media only screen and (min-width: 700px) {
  .button:hover .overlay {
    color: white;
    background: var(--c-primary);
  }

  .button:hover {
    opacity: 1;
  }
}

@media only screen and (max-width: 700px) {
  .gallery {
    grid-template-columns: 1fr;
  }
}

